# autouplaodinggg

./: .codespellrc  .gitignore  .gitlab-ci.yml  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG  LICENSE  README.md  auto_reupload.py  auto_upload.py  auto_upload_new.py  ggbot_base.py  pyproject.toml
.gitlab/ci/: base-images.gitlab-ci.yml  lint.gitlab-ci.yml  re-uploader.gitlab-ci.yml  tests.gitlab-ci.yml  uploaders.gitlab-ci.yml
Dockerfiles/: Dockerfile  Dockerfile.aarch64  Dockerfile.armhf  Dockerfile.baseimage  Dockerfile.baseimage.aarch64  Dockerfile.baseimage.armhf  Dockerfile.baseimage.disk  Dockerfile.baseimage.test  Dockerfile.disk  Dockerfile.new  Dockerfile.reuploader
dev_scripts/: cleanup_working_dir.sh  dev_commands.txt  docker-compose.yml  validate_templates.py
modules/: cache.py  config.py  constants.py  env.py  logger.py  server.py  template_schema_validator.py  torrent_client.py  uploader.py
modules/cache_vendors/: cache_mongo.py  constants.py
modules/custom_actions/: __init__.py  gpw_actions.py  nbl_actions.py  ptp_actions.py  spd_actions.py  tl_actions.py
modules/exceptions/: exception.py
modules/image_hosts/: image_host_base.py  image_host_manager.py  image_upload_status.py
modules/tfa/: tfa.py
modules/torrent_clients/: client_deluge.py  client_qbittorrent.py  client_rtorrent.py  client_transmission.py
modules/torrent_generator/: generator_base.py  mktorrent_generator.py  torf_generator.py  torrent_editor.py
modules/translations/: hybrid_mapper.py
modules/visor/: exceptions.py  schema.py  server.py
parameters/: image_host_urls.json  streaming_services.json  streaming_services_reverse.json  tag_grouping.json
parameters/tracker/: acronyms.json  api_keys.json
requirements/: requirements.txt  requirements_baseimages.txt  requirements_reuploader.txt  requirements_test.txt
samples/assistant/: config.env
samples/reuploader/: .env  .mongo_express.env  .qbittorrent.env  .rutorrent.env  docker-compose-qbittorrent.yml  docker-compose-rutorrent.yml  (+1 more)
schema/: default_template.json  site_template_schema.json
site_templates/: 3evils.json  aither.json  anthelion.json  asiancinema.json  beyond-hd.json  bit-hdtv.json  blutopia.json  default_template.json  desitorrents.json  greatposterwall.json  lst.json  nebulance.json  nextdemo.json  ntelogo.json  passthepopcorn.json  racing4everyone.json  reelflix.json  retroflix.json  skipthecommericals.json  skipthetrailers.json  speedapp.json  swarmazon.json  telly.json  thedarkcommunity.json  thesceneplace.json  torrentdb.json  torrentleech.json
tests/: __init__.py  conftest.py
utilities/: __init__.py  utils.py  utils_basic.py  utils_bdinfo.py  utils_dupes.py  utils_metadata.py  utils_miscellaneous.py  utils_reupload.py  utils_screenshots.py  utils_torrent.py  utils_translation.py  utils_translation_r.py  utils_user_input.py  utils_visor_server.py
(+101 files in other folders)
